--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -2513,8 +2513,8 @@ Jeglicher ungespeicherter Forschritt geht verloren.</de-DE>
 	</Entry>
 	<!--leader-info.xml-->
 	<Entry>
-		<zType>TEXT_LEADER_INFO_QUESTS</zType>
-		<de-DE>Aufträge:</de-DE>
+		<zType>TEXT_LEADER_INFO_GOALS</zType>
+		<de-DE>Ziele:</de-DE>
 	</Entry>
 	<!--help-screen.xml-->
 	<Entry>
