--- a/Translations/German/text-character-change.xml
+++ b/Translations/German/text-character-change.xml
@@ -1,4 +1,4 @@
-<!-- German de-DE (© Revan ©) -->
+<!-- German Translation (© Revan ©) -->
 
 <Root>
 	<Entry>
@@ -7,72 +7,108 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_KING</zType>
-		<de-DE>{masculine_0:König:Königin} {0_name}</de-DE>
+		<de-DE>König</de-DE>
 	</Entry>
 	<Entry>
-		<zType>TEXT_CHARACTER_TITLE_KING_CONSORT</zType>
-		<de-DE>{masculine_0:König Gemahl:Königin Gemahlin} {0_name}</de-DE>
+		<zType>TEXT_CHARACTER_TITLE_QUEEN</zType>
+		<de-DE>Königin</de-DE>
 	</Entry>
 	<Entry>
-		<zType>TEXT_CHARACTER_TITLE_KING_DOWAGER</zType>
-		<de-DE>{masculine_0:Königswitwer:Königinwitwe} {0_name}</de-DE>
+		<zType>TEXT_CHARACTER_TITLE_GENERAL</zType>
+		<de-DE>Feh.</de-DE>
 	</Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_PRINCE</zType>
-		<de-DE>{masculine_0:Prinz:Prinzessin} {0_name}</de-DE>
-  </Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_PRINCE_CONSORT</zType>
-		<de-DE>{masculine_0:Prinz Gemahl:Prinzessin Gemahlin} {0_name}</de-DE>
-  </Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_DUKE</zType>
-		<de-DE>{masculine_0:Herzog:Herzogin} {0_name}</de-DE>
-  </Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_DUKE_CONSORT</zType>
-		<de-DE>{masculine_0:Herzog Gemahl:Herzogin Gemahlin} {0_name}</de-DE>
-  </Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_COUNCIL</zType>
-    <de-DE>{0_title} {1_name}</de-DE>
-  </Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_GENERAL</zType>
-    <de-DE>Feh. {0_name}</de-DE>
-  </Entry>
-  <Entry>
-    <zType>TEXT_CHARACTER_TITLE_GOVERNOR</zType>
-    <de-DE>Sth. {0_name}</de-DE>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_GENERAL_F</zType>
+		<de-DE>Feh.</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_CONSORT</zType>
+		<de-DE>{0_title} Gemahl</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_CONSORT_F</zType>
+		<de-DE>{0_title} Gemahlin</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_LEADER_DOWAGER</zType>
+		<de-DE>{0_title} Witwer</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_LEADER_DOWAGER_F</zType>
+		<de-DE>{0_title} Witwe</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_HEIR</zType>
+		<de-DE>Prinz</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_HEIR_F</zType>
+		<de-DE>Prinzessin</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_SUCCESSOR</zType>
+		<de-DE>Herzog</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_SUCCESSOR_F</zType>
+		<de-DE>Herzogin</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_COUNCIL</zType>
+		<de-DE>{0_title}</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_GOVERNOR</zType>
+		<de-DE>Sth.</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_GOVERNOR_F</zType>
+		<de-DE>Sth.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_AGENT</zType>
-		<de-DE>Agent {0_name}</de-DE>
+		<de-DE>Agent</de-DE>
 	</Entry>
 	<Entry>
-		<zType>TEXT_CHARACTER_TITLE_PATRIARCH</zType>
-		<de-DE>{masculine_0:Patriarch:Matriarch} {0_name}</de-DE>
+		<zType>TEXT_CHARACTER_TITLE_AGENT_F</zType>
+		<de-DE>Agentin</de-DE>
 	</Entry>
 	<Entry>
-		<zType>TEXT_CHARACTER_TITLE_OLIGRARCH</zType>
-		<de-DE>Oligarch {0_name}</de-DE>
+		<zType>TEXT_CHARACTER_TITLE_RELIGION_HEAD</zType>
+		<de-DE>Patriarch</de-DE>
 	</Entry>
-  <!-- Relation -->
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_RELIGION_HEAD_F</zType>
+		<de-DE>Matriarchin</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_OLIGARCH</zType>
+		<de-DE>Oligarch</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_OLIGARCH_F</zType>
+		<de-DE>Oligarchin</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CHARACTER_TITLE_NAME</zType>
+		<de-DE>{0_title} {1_name}</de-DE>
+	</Entry>
+	<!-- Relation -->
 	<Entry comment="TEXT_CHARACTER_RELATION texts have the leader (i.e. 'You') as variable index 1 for gender">
 		<zType>TEXT_CHARACTER_RELATION_YOU</zType>
 		<de-DE>Du</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_SPOUSE</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Ehemann<feminine>Deine Ehefrau<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Ehemann:Deine Ehefrau}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_CHILD</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Sohn<feminine>Deine Tochter<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Sohn:Deine Tochter}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_GRANDCHILD</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Enkel<feminine>Deine Enkelin<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Enkel:Deine Enkelin}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_DESCENDANT</zType>
@@ -80,11 +116,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_PARENT</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Vater<feminine>Deine Mutter<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Vater:Deine Mutter}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_GRANDPARENT</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Großvater<feminine>Deine Großmutter<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Großvater:Deine Großmutter}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_ANCESTOR</zType>
@@ -92,15 +128,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_SIBLING</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Bruder<feminine>Deine Schwester<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Bruder:Deine Schwester}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_SIBLING_IN_LAW</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Schwager<feminine>Deine Schwägerin<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Schwager:Deine Schwägerin}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_HALF_SIBLING</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Halb-Bruder<feminine>Deine Halb-Schwester<end>]]></de-DE>
+		<de-DE>{masculine_0:Dein Halb-Bruder:Deine Halb-Schwester}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_COUSIN</zType>
@@ -108,27 +144,27 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_AUNT_UNCLE</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Onkel<feminine>Deine Tante<end>]]></de-DE>
+		<de-DE>your {masculine_0:Dein Onkel:Deine Tante}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_NIECE_NEPHEW</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Neffe<feminine>Deine Nichte<end>]]></de-DE>
+		<de-DE>your {masculine_0:Dein Neffe:Deine Nichte}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_CHILD_IN_LAW</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Schwiegersohn<feminine>Deine Schwiegertochter<end>]]></de-DE>
+		<de-DE>your {masculine_0:Dein Schwiegersohn:Deine Schwiegertochter}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_PARENT_IN_LAW</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Schwiegervater<feminine>Deine Schwiegermutter<end>]]></de-DE>
+		<de-DE>your {masculine_0:Dein Schwiegervater:Deine Schwiegermutter}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_STEPCHILD</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Stiefsohn<feminine>Deine Stieftochter<end>]]></de-DE>
+		<de-DE>your {masculine_0:Dein Stiefsohn:Deine Stieftochter}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_STEPPARENT</zType>
-		<de-DE><![CDATA[<masculine_0>Dein Stiefvater<feminine>Deine Stiefmutter<end>]]></de-DE>
+		<de-DE>your {masculine_0:Dein Stiefvater:Deine Stiefmutter}</de-DE>
 	</Entry>
   <Entry>
     <zType>TEXT_CHARACTER_RELATION_RELATIVE</zType>
@@ -145,11 +181,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_2</zType>
-		<de-DE>Zweiter in der Thronfolge</de-DE>
+		<de-DE>Dritter der Thronfolge</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_3</zType>
-		<de-DE>Dritter in der Thronfolge</de-DE>
+		<de-DE>Vierter der Thronfolge</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_4</zType>
