fixed totor mission verb

--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -522,7 +522,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_TUTOR</zType>
-		<de-DE>Lehrer~ein Lehrer~Lehrer~Unterrichtet</de-DE>
+		<de-DE>Unterrichte~ein Lehrer~Lehrer~Unterrichtet</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CONCEPT_UNDO</zType>
